force-app/main/default/objects/Transaction__c/fields/Closing_Type__c.field-meta.xml
<CustomField>
    <fullName>Closing_Type__c</fullName>
    <label>Closing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person_Type_c</fullName>
                <label>In-Person</label>
            </value>
            <value>
                <fullName>Hybrid ENote</fullName>
            </value>
            <value>
                <fullName>Hybrid Paper Note</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>