force-app/main/default/objects/Transaction__c/fields/CLTV__c.field-meta.xml
<CustomField>
    <fullName>CLTV__c</fullName>
    <label>CLTV</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>