force-app/main/default/objects/Transaction__c/fields/CoBorrower_Income__c.field-meta.xml
<CustomField>
    <fullName>CoBorrower_Income__c</fullName>
    <label>Co-Borrower Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>