force-app/main/default/objects/Transaction__c/fields/Commissions_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>Commissions_1st_TD__c</fullName>
    <label>Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>