force-app/main/default/objects/Transaction__c/fields/Commissions_Generated__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Generated__c</fullName>
    <label>Commissions Generated</label>
    <type>Date</type>
</CustomField>