force-app/main/default/objects/Transaction__c/fields/Commitment_Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Letter_Sent_Date__c</fullName>
    <label>Commitment Letter Sent Date</label>
    <type>Date</type>
</CustomField>