force-app/main/default/objects/Transaction__c/fields/CommSent_Appraisal_Ordered__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Appraisal_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Appraisal Ordered</label>
    <type>Checkbox</type>
</CustomField>