force-app/main/default/objects/Transaction__c/fields/CommSent_Appraisal_Received__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Appraisal_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Appraisal Received</label>
    <type>Checkbox</type>
</CustomField>