force-app/main/default/objects/Transaction__c/fields/CommSent_Approved__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Approved</label>
    <type>Checkbox</type>
</CustomField>