force-app/main/default/objects/Transaction__c/fields/CommSent_Disclosures_Out__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Disclosures_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Disclosures Out</label>
    <type>Checkbox</type>
</CustomField>