force-app/main/default/objects/Transaction__c/fields/CommSent_Submitted__c.field-meta.xml
<CustomField>
    <fullName>CommSent_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CommSent Submitted</label>
    <type>Checkbox</type>
</CustomField>