force-app/main/default/objects/Transaction__c/fields/Compensation_Payer_Type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Payer_Type__c</fullName>
    <label>Compensation Payer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>