force-app/main/default/objects/Transaction__c/fields/Completed_CLA_Call_Text_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Completed_CLA_Call_Text_Tasks__c</fullName>
    <description>This field will count the number of tasks in Completed status with a CLA subtype of Call/Text. It is used by the Roll-Up Helper tool.</description>
    <label>Completed CLA Call/Text Tasks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>