force-app/main/default/objects/Transaction__c/fields/Cond_Approval_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cond_Approval_Email_Sent__c</fullName>
    <label>Cond. Approval Email Sent</label>
    <type>Date</type>
</CustomField>