force-app/main/default/objects/Transaction__c/fields/Conditionally_Approved__c.field-meta.xml
<CustomField>
    <fullName>Conditionally_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditionally Approved</label>
    <type>Checkbox</type>
</CustomField>