force-app/main/default/objects/Transaction__c/fields/Conditionally_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Conditionally_Approved_Date__c</fullName>
    <label>Conditionally Approved Date</label>
    <type>Date</type>
</CustomField>