force-app/main/default/objects/Transaction__c/fields/Conditions_Needed__c.field-meta.xml
<CustomField>
    <fullName>Conditions_Needed__c</fullName>
    <label>Conditions Needed</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>