force-app/main/default/objects/Transaction__c/fields/Conditions_One_Drive_Link__c.field-meta.xml
<CustomField>
    <fullName>Conditions_One_Drive_Link__c</fullName>
    <label>Conditions One Drive Link</label>
    <type>Url</type>
</CustomField>