force-app/main/default/objects/Transaction__c/fields/Condo_Association_Contact__c.field-meta.xml
<CustomField>
    <fullName>Condo_Association_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condo Association Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (Condo Association Contact)</relationshipLabel>
    <relationshipName>Transactions9</relationshipName>
    <type>Lookup</type>
</CustomField>