force-app/main/default/objects/Transaction__c/fields/Condo_Docs_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Condo_Docs_Ordered__c</fullName>
    <label>Condo Docs Ordered</label>
    <type>Date</type>
</CustomField>