force-app/main/default/objects/Transaction__c/fields/Condo_Docs_Received__c.field-meta.xml
<CustomField>
    <fullName>Condo_Docs_Received__c</fullName>
    <label>Condo Docs Received</label>
    <type>Date</type>
</CustomField>