force-app/main/default/objects/Transaction__c/fields/Confirm_File_Owner_Matches_LO_on_1003__c.field-meta.xml
<CustomField>
    <fullName>Confirm_File_Owner_Matches_LO_on_1003__c</fullName>
    <label>Confirm File Owner Matches LO on 1003</label>
    <type>DateTime</type>
</CustomField>