force-app/main/default/objects/Transaction__c/fields/Consumer_Webinar_CTC_Notified__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Webinar_CTC_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal guard used by the Consumer Webinar CTC notification flow so Angelina is emailed only the first time the transaction reaches Approval or beyond.</description>
    <label>Consumer Webinar CTC Notified</label>
    <type>Checkbox</type>
</CustomField>