force-app/main/default/objects/Transaction__c/fields/Contact_Made__c.field-meta.xml
<CustomField>
    <fullName>Contact_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether contact has been made with the client to request docs, when the transaction is in CLA status.</description>
    <label>Processor CLA Contact Made</label>
    <type>Checkbox</type>
</CustomField>