force-app/main/default/objects/Transaction__c/fields/Contributor__c.field-meta.xml
<CustomField>
    <fullName>Contributor__c</fullName>
    <label>Contributor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller Paid</fullName>
            </value>
            <value>
                <fullName>Lender Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>