force-app/main/default/objects/Transaction__c/fields/CTC_Date__c.field-meta.xml
<CustomField>
    <fullName>CTC_Date__c</fullName>
    <label>CTC Date</label>
    <type>Date</type>
</CustomField>