force-app/main/default/objects/Transaction__c/fields/Current_CD_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_CD_Date__c</fullName>
    <label>Current CD Date</label>
    <type>Date</type>
</CustomField>