force-app/main/default/objects/Transaction__c/fields/Current_Status_Since__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Since__c</fullName>
    <description>Date the Transaction entered its current Status. Used for CEO pipeline aging reports.</description>
    <label>Current Status Since</label>
    <type>Date</type>
</CustomField>