force-app/main/default/objects/Transaction__c/fields/Daily_Interest__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interest__c</fullName>
    <label>Daily Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>