force-app/main/default/objects/Transaction__c/fields/Date_Needed__c.field-meta.xml
<CustomField>
    <fullName>Date_Needed__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>