force-app/main/default/objects/Transaction__c/fields/Days_In_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Current_Status__c</fullName>
    <description>Formula count of days since the Transaction entered its current Status.</description>
    <formula>IF(ISBLANK(Current_Status_Since__c), NULL, TODAY() - Current_Status_Since__c)</formula>
    <label>Days in Current Status</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>