force-app/main/default/objects/Transaction__c/fields/Days_In_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Warehouse__c</fullName>
    <formula>IF(ISPICKVAL(Channel__c, &apos;Correspondent&apos;), 
   Funding_Wire_Requested__c - Funded_Date__c, 
   0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Warehouse</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>