force-app/main/default/objects/Transaction__c/fields/Days_Over_90__c.field-meta.xml
<CustomField>
    <fullName>Days_Over_90__c</fullName>
    <formula>IF(Days_In_Warehouse__c &gt; 90, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Over 90</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>