force-app/main/default/objects/Transaction__c/fields/Days_Since_Submission__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Submission__c</fullName>
    <label>Days Since Submission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>