force-app/main/default/objects/Transaction__c/fields/Deliver_CD_By__c.field-meta.xml
<CustomField>
    <fullName>Deliver_CD_By__c</fullName>
    <label>Deliver CD By</label>
    <type>Date</type>
</CustomField>