force-app/main/default/objects/Transaction__c/fields/Disclosure_Out__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disclosure Out</label>
    <type>Checkbox</type>
</CustomField>