force-app/main/default/objects/Transaction__c/fields/Disclosures_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Disclosures_Due_Date__c</fullName>
    <label>Disclosures Due Date</label>
    <type>Date</type>
</CustomField>