force-app/main/default/objects/Transaction__c/fields/Disclosures_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Disclosures_Out_Date__c</fullName>
    <label>Disclosures Out Date</label>
    <type>DateTime</type>
</CustomField>