force-app/main/default/objects/Transaction__c/fields/Disclosures_Received__c.field-meta.xml
<CustomField>
    <fullName>Disclosures_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disclosures Received</label>
    <type>Checkbox</type>
</CustomField>