force-app/main/default/objects/Transaction__c/fields/Disclosures_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Disclosures_Received_Date__c</fullName>
    <label>Disclosures Received Date</label>
    <type>DateTime</type>
</CustomField>