force-app/main/default/objects/Transaction__c/fields/Discount_Points__c.field-meta.xml
<CustomField>
    <fullName>Discount_Points__c</fullName>
    <label>Discount Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>