force-app/main/default/objects/Transaction__c/fields/Do_Not_Include_In_UWM_Sync__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Include_In_UWM_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Include In UWM Sync</label>
    <type>Checkbox</type>
</CustomField>