force-app/main/default/objects/Transaction__c/fields/Doc_Type_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type_1st_TD__c</fullName>
    <label>Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Stated</fullName>
            </value>
            <value>
                <fullName>Lite</fullName>
            </value>
            <value>
                <fullName>SISA</fullName>
            </value>
            <value>
                <fullName>SIVA</fullName>
            </value>
            <value>
                <fullName>SINA</fullName>
            </value>
            <value>
                <fullName>VINA</fullName>
            </value>
            <value>
                <fullName>No Ratio</fullName>
            </value>
            <value>
                <fullName>NINA</fullName>
            </value>
            <value>
                <fullName>No Doc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>