force-app/main/default/objects/Transaction__c/fields/Docs_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_Ordered_Date__c</fullName>
    <label>Docs Ordered Date</label>
    <type>Date</type>
</CustomField>