force-app/main/default/objects/Transaction__c/fields/Download_Docs_to_Efolder__c.field-meta.xml
<CustomField>
    <fullName>Download_Docs_to_Efolder__c</fullName>
    <label>Download Docs to Efolder</label>
    <type>Date</type>
</CustomField>