force-app/main/default/objects/Transaction__c/fields/DPA__c.field-meta.xml
<CustomField>
    <fullName>DPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DPA</label>
    <type>Checkbox</type>
</CustomField>