force-app/main/default/objects/Transaction__c/fields/DTI_Front_End__c.field-meta.xml
<CustomField>
    <fullName>DTI_Front_End__c</fullName>
    <label>DTI Front End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>