force-app/main/default/objects/Transaction__c/fields/E_Consent_Complete__c.field-meta.xml
<CustomField>
    <fullName>E_Consent_Complete__c</fullName>
    <label>E-Consent Complete</label>
    <type>Date</type>
</CustomField>