force-app/main/default/objects/Transaction__c/fields/Ease_Link__c.field-meta.xml
<CustomField>
    <fullName>Ease_Link__c</fullName>
    <label>Ease Link</label>
    <type>Url</type>
</CustomField>