force-app/main/default/objects/Transaction__c/fields/Email_Send_City_Furniture_GC_to_Realtor__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_City_Furniture_GC_to_Realtor__c</fullName>
    <label>Email/Send City Furniture GC to Realtor</label>
    <type>DateTime</type>
</CustomField>