force-app/main/default/objects/Transaction__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the intro email has been sent to the client, when the transaction is in CLA status.</description>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>