force-app/main/default/objects/Transaction__c/fields/Encompass_Loan_ID__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Loan_ID__c</fullName>
    <description>Loan ID from Encompass&apos;s system</description>
    <label>Encompass Loan ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>