force-app/main/default/objects/Transaction__c/fields/EOMONTH__c.field-meta.xml
<CustomField>
    <fullName>EOMONTH__c</fullName>
    <label>EOMONTH</label>
    <type>Date</type>
</CustomField>