force-app/main/default/objects/Transaction__c/fields/Escrow_Agent__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrow Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (Escrow Agent)</relationshipLabel>
    <relationshipName>Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>