force-app/main/default/objects/Transaction__c/fields/Escrow_Total__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Total__c</fullName>
    <label>Escrow Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>