force-app/main/default/objects/Transaction__c/fields/Esign_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Esign_Complete_Date__c</fullName>
    <label>Esign Complete Date</label>
    <type>Date</type>
</CustomField>