force-app/main/default/objects/Transaction__c/fields/Esign_Completed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Esign_Completed_Flag__c</fullName>
    <label>Esign Completed Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>