force-app/main/default/objects/Transaction__c/fields/Exclude_From_MCR__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_MCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From MCR</label>
    <type>Checkbox</type>
</CustomField>