force-app/main/default/objects/Transaction__c/fields/Expected_Cash_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Expected_Cash_To_Close__c</fullName>
    <label>Expected Cash To Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>