force-app/main/default/objects/Transaction__c/fields/Fannie_CRM_Approved_Condo__c.field-meta.xml
<CustomField>
    <fullName>Fannie_CRM_Approved_Condo__c</fullName>
    <label>Fannie CRM Approved Condo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>