force-app/main/default/objects/Transaction__c/fields/FB_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>FB_Click_ID__c</fullName>
    <label>FB Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>