force-app/main/default/objects/Transaction__c/fields/Federal_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Federal_Reference_Number__c</fullName>
    <label>Federal Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>