force-app/main/default/objects/Transaction__c/fields/FedEx_Label_Sent__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Label_Sent__c</fullName>
    <label>FedEx Label Sent</label>
    <type>Date</type>
</CustomField>