force-app/main/default/objects/Transaction__c/fields/FedEx_Labels_Received__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Labels_Received__c</fullName>
    <label>FedEx Labels Tendered</label>
    <type>Date</type>
</CustomField>