force-app/main/default/objects/Transaction__c/fields/FedexTrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>FedexTrackingNumber__c</fullName>
    <label>Fedex Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>