force-app/main/default/objects/Transaction__c/fields/FHA_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>FHA_Case_Number__c</fullName>
    <label>FHA Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>