force-app/main/default/objects/Transaction__c/fields/FHA_Upfront_Mortgage_Insurance_Premium__c.field-meta.xml
<CustomField>
    <fullName>FHA_Upfront_Mortgage_Insurance_Premium__c</fullName>
    <label>FHA Upfront Mortgage Insurance Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>