force-app/main/default/objects/Transaction__c/fields/File_Last_Touch__c.field-meta.xml
<CustomField>
    <fullName>File_Last_Touch__c</fullName>
    <label>File Last Touch</label>
    <type>Date</type>
</CustomField>