force-app/main/default/objects/Transaction__c/fields/File_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>File_Open_Date__c</fullName>
    <label>File Open Date</label>
    <type>Date</type>
</CustomField>