force-app/main/default/objects/Transaction__c/fields/First_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>First_Mortgage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Mortgage</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transactions (DPA)</relationshipLabel>
    <relationshipName>Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>