force-app/main/default/objects/Transaction__c/fields/First_UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>First_UTM_Content__c</fullName>
    <label>First UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>