force-app/main/default/objects/Transaction__c/fields/First_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>First_UTM_Medium__c</fullName>
    <label>First UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>