force-app/main/default/objects/Transaction__c/fields/Flood_Cert__c.field-meta.xml
<CustomField>
    <fullName>Flood_Cert__c</fullName>
    <label>Flood Cert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>