force-app/main/default/objects/Transaction__c/fields/Flood_Insurance_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Flood_Insurance_Received_Date__c</fullName>
    <label>Flood Insurance Received Date</label>
    <type>Date</type>
</CustomField>