force-app/main/default/objects/Transaction__c/fields/Form_Adress__c.field-meta.xml
<CustomField>
    <fullName>Form_Adress__c</fullName>
    <formula>IF(
    CONTAINS(TEXT(Occupancy__c), &quot;Primary&quot;),
    Property_Address__c,
    Borrower_Name__r.PersonMailingStreet
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Adress</label>
    <type>Text</type>
</CustomField>