force-app/main/default/objects/Transaction__c/fields/Form_Ciy_And_State__c.field-meta.xml
<CustomField>
    <fullName>Form_Ciy_And_State__c</fullName>
    <formula>IF(
    CONTAINS(TEXT(Occupancy__c), &quot;Primary&quot;),
        Property_City__c &amp; &quot;, &quot; &amp; Property_State__c &amp; &quot;, &quot; &amp; Property_Postal_Code__c,
    Borrower_Name__r.PersonMailingCity &amp; &quot;, &quot; &amp; Borrower_Name__r.PersonMailingState &amp; &quot; &quot; &amp; Borrower_Name__r.PersonMailingPostalCode
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Ciy And State</label>
    <type>Text</type>
</CustomField>