force-app/main/default/objects/Transaction__c/fields/Form_Property_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Form_Property_Full_Address__c</fullName>
    <formula>Property_Address__c &amp; &quot;, &quot; &amp; Property_City__c &amp; &quot;, &quot; &amp; Property_State__c &amp; &quot;, &quot; &amp; Property_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Property Full Address</label>
    <type>Text</type>
</CustomField>