force-app/main/default/objects/Transaction__c/fields/Form_recipient__c.field-meta.xml
<CustomField>
    <fullName>Form_recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form recipient</label>
    <type>Checkbox</type>
</CustomField>