force-app/main/default/objects/Transaction__c/fields/Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Form_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Sent</label>
    <type>Checkbox</type>
</CustomField>