force-app/main/default/objects/Transaction__c/fields/Fraud_Guard__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Guard__c</fullName>
    <label>Fraud Guard</label>
    <type>Date</type>
</CustomField>