force-app/main/default/objects/Transaction__c/fields/Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_Date__c</fullName>
    <label>Moved to Funding</label>
    <type>Date</type>
</CustomField>