force-app/main/default/objects/Transaction__c/fields/Funding_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Funding_Authorization__c</fullName>
    <label>Funding Authorization</label>
    <type>Date</type>
</CustomField>