force-app/main/default/objects/Transaction__c/fields/Funding_Fee__c.field-meta.xml
<CustomField>
    <fullName>Funding_Fee__c</fullName>
    <label>UFMIP/Funding Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>