force-app/main/default/objects/Transaction__c/fields/Funding_Request__c.field-meta.xml
<CustomField>
    <fullName>Funding_Request__c</fullName>
    <label>Funding Request</label>
    <type>Date</type>
</CustomField>