force-app/main/default/objects/Transaction__c/fields/Funding_Wire_Requested__c.field-meta.xml
<CustomField>
    <fullName>Funding_Wire_Requested__c</fullName>
    <label>Funding Wire Requested</label>
    <type>Date</type>
</CustomField>