force-app/main/default/objects/Transaction__c/fields/Getting_Started_Email__c.field-meta.xml
<CustomField>
    <fullName>Getting_Started_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Getting Started Email</label>
    <type>Checkbox</type>
</CustomField>