force-app/main/default/objects/Transaction__c/fields/Gross_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Gross_Compensation__c</fullName>
    <formula>(Loan_Amount_1st__c * (BPS__c / 10000)) +
IF(
    ISPICKVAL(Channel__c, &quot;Correspondent&quot;),
    1695,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>