force-app/main/default/objects/Transaction__c/fields/Haircut__c.field-meta.xml
<CustomField>
    <fullName>Haircut__c</fullName>
    <label>Haircut</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>