force-app/main/default/objects/Transaction__c/fields/Hard_Stops_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Hard_Stops_Enabled__c</fullName>
    <formula>DATEVALUE(CreatedDate) &gt;= DATE(2024, 12, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hard Stops Enabled</label>
    <type>Checkbox</type>
</CustomField>