force-app/main/default/objects/Transaction__c/fields/Has_Piggyback_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Has_Piggyback_Seconds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Piggyback Seconds</label>
    <type>Checkbox</type>
</CustomField>