force-app/main/default/objects/Transaction__c/fields/Hazard_Ins_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Ins_1st_TD__c</fullName>
    <label>Hazard Ins. (monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>