force-app/main/default/objects/Transaction__c/fields/Hazard_Insurance_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Insurance_Received_Date__c</fullName>
    <label>Hazard Insurance Received Date</label>
    <type>Date</type>
</CustomField>