force-app/main/default/objects/Transaction__c/fields/HB_Add_Biz_Dev_Reach_Saludes_on_Purchase__c.field-meta.xml
<CustomField>
    <fullName>HB_Add_Biz_Dev_Reach_Saludes_on_Purchase__c</fullName>
    <label>HB Add Biz Dev Reach/Saludes on Purchase</label>
    <type>DateTime</type>
</CustomField>