force-app/main/default/objects/Transaction__c/fields/HOA_1st_TD__c.field-meta.xml
<CustomField>
    <fullName>HOA_1st_TD__c</fullName>
    <label>HOA (monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>