force-app/main/default/objects/Transaction__c/fields/HOA_Contact__c.field-meta.xml
<CustomField>
    <fullName>HOA_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HOA Contact</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions (HOA Contact)</relationshipLabel>
    <relationshipName>Transactions3</relationshipName>
    <type>Lookup</type>
</CustomField>